have the Three Musketers (Vault, Select, Login)
have the base verison of all three

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.user.foolr" >
-
         android:maxSdkVersion="18" />
     <application
         android:allowBackup="true"
@@ -17,6 +16,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Vault"
+            android:label="@string/title_activity_vault" >
+        </activity>
+        <activity
+            android:name=".SelectPhoto"
+            android:label="@string/title_activity_select_photo" >
+        </activity>
     </application>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
 </manifest>
