--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".SelectPhoto"
             android:label="@string/title_activity_select_photo" >
         </activity>
+        <activity android:name=".FullScreen" android:label="@string/app_name"/>
+        <activity android:name=".FullScreen2" android:label="@string/app_name"/>
+        <activity android:name=".FullScreen3" android:label="@string/app_name"/>
+        <activity android:name=".FullScreen4" android:label="@string/app_name"/>
     </application>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
